--- a/src/lang/zh_CN.json
+++ b/src/lang/zh_CN.json
@@ -1,4 +1,29 @@
 {
+    "base": {
+        "gamemode": {
+            "survival": "生存",
+            "creative": "创造",
+            "adventure": "冒险",
+            "spectator": "旁观",
+            "undefined": "未定义游戏模式"
+        },
+        "yesno": {
+            "yes": "是",
+            "no": "否"
+        },
+        "spstatus": {
+            "offline": "离线",
+            "alive": "在线",
+            "dead": "死亡",
+            "undefined": "未定义状态"
+        },
+        "dimension": {
+            "overworld": "主世界",
+            "nether": "地狱",
+            "theend": "末地",
+            "undefined": "未定义维度"
+        }
+    },
     "command": {
         "sp": {
             "description": "假人",
@@ -9,15 +34,121 @@
             }
         }
     },
+    "gui": {
+        "mainmenu": {
+            "title": "CoralFans-SimulatedPlayer 主菜单",
+            "splistbutton": "假人列表",
+            "grouplistbutton": "假人组列表",
+            "managerlistbutton": "设置"
+        },
+        "splist": {
+            "title": "假人列表",
+            "newsp": "创建假人"
+        },
+        "operatelist": {
+            "title": "假人操作列表",
+            "spinfo": "假人信息",
+            "online": "假人上线",
+            "rm": "删除假人",
+            "offline": "假人下线",
+            "respawn": "假人重生",
+            "inv": "假人背包操作",
+            "move": "假人移动操作",
+            "lookat": "假人看向指定坐标",
+            "operate": "假人执行操作",
+            "stop": "假人停止交互操作",
+            "action": "假人行为操作",
+            "message": "假人消息操作"
+        },
+        "spinfo": {
+            "title": "假人信息",
+            "name": "假人名称     : ",
+            "status": "假人状态     : ",
+            "owner": "所有者       : ",
+            "pos": "假人坐标     : ",
+            "respawnpos": "假人重生坐标 : ",
+            "gamemode": "假人游戏模式 : ",
+            "isFree": "是否空闲     : ",
+            "offlinepos": "假人离线坐标 : "
+        },
+        "invoperatelist": {
+            "title": "假人背包操作",
+            "swap": "与假人交换背包",
+            "drop": "假人丢弃手持物品",
+            "dropinv": "假人丢弃背包内全部物品"
+        },
+        "moveoperate": {
+            "title": "假人移动操作",
+            "operate": "选择操作 :",
+            "tp": "传送",
+            "moveto": "移动",
+            "navto": "寻路",
+            "targetpos": "目标坐标(不输入则默认玩家位置) : x y z",
+            "targetdim": "目标维度(仅使用tp时有效) : ",
+            "poserror": "§c坐标参数错误§r"
+        },
+        "lookatoperate": {
+            "title": "假人看向指定坐标",
+            "targetpos": "目标坐标(不输入则默认看向玩家脚底) : x y z",
+            "poserror": "§c坐标参数错误§r"
+        },
+        "operate": {
+            "title": "假人执行操作",
+            "attack": "攻击",
+            "interact": "交互",
+            "build": "放置",
+            "use": "使用",
+            "destroy": "破坏",
+            "jump": "跳跃",
+            "interval": "操作间隔/gt",
+            "times": "重复次数/gt",
+            "long": "操作时长(仅使用use时有效)/gt",
+            "intervalerror": "§c\"操作间隔\"参数错误§r",
+            "timeserror": "§c\"重复次数\"参数错误§r",
+            "longerror": "§c\"操作时长\"参数错误§r"
+        },
+        "actionoperate": {
+            "title": "假人行为操作",
+            "sneaking": "假人潜行",
+            "sneak": "潜行",
+            "releasesneak": "取消潜行",
+            "swimming": "假人游泳",
+            "swim": "游泳",
+            "releaseswim": "取消游泳"
+        },
+        "messageoperate": {
+            "title": "假人消息操作",
+            "chat": "发送消息",
+            "runcmd": "执行指令",
+            "text": "输入文本"
+        },
+        "createsp": {
+            "title": "创建假人",
+            "name": "假人名称 :",
+            "targetpos": "目标坐标(不输入则默认玩家位置) : x y z",
+            "targetdim": "目标维度 :",
+            "poserror": "§c坐标参数错误§r"
+        },
+        "grouplist": {
+            "title": "假人组列表",
+            "newgroup": "新建组"
+        },
+        "groupoperatelist": {
+            "title": "假人组操作",
+            "groupinfo": "假人组信息",
+            "manage": "管理假人组"
+        }
+    },
     "translate": {
         "simplayer": {
             "success": "操作成功",
             "error": {
                 "maxspawn": "生成过太多假人，请重启服务器",
                 "exist": "已存在",
-                "toomanyonline": "在线假人过多",
+                "toomanyonline": "在线总假人数量超过上限 \"{}\"",
+                "toomanyonlineperplayer": "您当前在线假人超过上限 \"{}\"",
                 "toomanyown": "拥有假人过多",
-                "toomanygroup": "存在组过多",
+                "toomanygroup": "您创建的组数量超过上限",
                 "cannotcreate": "无法创建假人",
                 "notfound": "找不到对象",
                 "permissiondenied": "权限拒绝",
@@ -30,7 +161,7 @@
             "info": {
                 "online": "在线: {}",
                 "simplayer": "\n- 名称: {}\n - XUID: {}\n - 所有者UUID: {}\n - 状态: {}\n - 组: {}",
-                "group": "- 名称: {}\n - 管理员: {}\n - 假人: {}\n"
+                "group": "- 名称: {}\n -所有者：{}\n - 管理员: {}\n - 假人: {}\n"
             }
         }
     }
